# ImageFusion

./: .Rbuildignore  .gitignore  CRAN-RELEASE  DESCRIPTION  LICENSE  LICENSE.note  LICENSE.txt  Makevars.in  Makevars.win  NAMESPACE  NEWS.md  News.md  Readme.md  Test_ImageFusion_Task.R  Test_Skript_Tasks.R  Test_delete.R  cleanup  config.status  configure  configure.ac  cran-comments.md  execture_imagefusor_jobs.cpp
.github/workflows/: R-CMD-check.yaml
R/: ImageFusion.R  ImageFusion_Task.R  RcppExports.R  Test_ImageFusion_Task.R  Test_Skript.R  estarfm_job.R  fitfc_job.R  imagefusion_task.R  imginterp_task.R  internal.R  spstfm_job.R  starfm_job.R  zzz.R
autom4te.cache/: output.0  requests  traces.0  traces.0t
include/: EstarfmOptions.h  GeoInfo.h  Image.h  Options.h  exceptions.h  fitfc.h  fitfc_options.h  optionparser.h  optionparserimpl.h  spstfm.h
inst/: Copyrights
inst/landsat/filled/: 2020068_191-28.tif_filled_kranj.tif  2020077_190-28.tif_filled_kranj.tif  2020093_190-28.tif_filled_kranj.tif  2020100_191-28.tif_filled_kranj.tif
inst/landsat/unfilled/: 2020068_191-28_kranj.tif  2020077_190-28_kranj.tif  2020100_191-28_kranj.tif
inst/modis/filled/: 2020068_18-04_kranj.tif  2020069_18-04_kranj.tif  2020070_18-04_kranj.tif  2020071_18-04_kranj.tif  2020072_18-04_kranj.tif  2020073_18-04_kranj.tif  2020074_18-04_kranj.tif  2020075_18-04_kranj.tif  2020076_18-04_kranj.tif  2020077_18-04_kranj.tif  2020078_18-04_kranj.tif  2020079_18-04_kranj.tif  2020080_18-04_kranj.tif  2020081_18-04_kranj.tif  2020082_18-04_kranj.tif  2020083_18-04_kranj.tif  2020084_18-04_kranj.tif  2020085_18-04_kranj.tif  2020086_18-04_kranj.tif  2020087_18-04_kranj.tif  2020088_18-04_kranj.tif  2020089_18-04_kranj.tif  2020090_18-04_kranj.tif  2020091_18-04_kranj.tif  2020092_18-04_kranj.tif  2020093_18-04_kranj.tif
man/: ImageFusion-package.Rd  ImageFusion.Rd  estarfm_job.Rd  fitfc_job.Rd  has_high.Rd  imagefusion_task.Rd  imginterp_task.Rd  spstfm_job.Rd  starfm_job.Rd
src/: Estarfm.cpp  Image.cpp  LICENSE_imagefusion.txt  Makevars  Makevars (copy).in  Makevars.in  Makevars.win  RcppExports.cpp  Starfm.cpp  Test_Skript.R  Test_Skript_Jobs.R  Test_Skript_Tasks.R  execture_imagefusor_jobs.cpp  execture_imginterp_job.cpp  fileformat.cpp  helper_function_test.cpp  optionparser.cpp  rcpp_hello_world.cpp  spstfm.cpp  tmp.def
src/include/: DataFusor.h  Estarfm.h  GeoInfo.h  Image.h  MultiResImages.h  Parallelizer.h  ParallelizerOptions.h  Proxy.h  Starfm.h  StarfmOptions.h  Type.h  datafusor.h  estarfm.h  estarfm_options.h  exceptions.h  fileformat.h  filesystem.h  fitfc.h  fitfc_options.h  geoinfo.h  image.h  imagefusion.h  iterators.h  multiresimages.h  optionparser.h  options.h  parallelizer.h  parallelizer_options.h  proxy.h  spstfm.h  staarch.h  staarch_options.h  starfm.h  starfm_options.h  type.h
src/src/: GeoInfo.cpp  Image.cpp  Starfm.cpp  estarfm.cpp  fileformat.cpp  filesystem.cpp  fitfc.cpp  geoinfo.cpp  image.cpp  optionparser.cpp  spstfm.cpp  spstfm_impl.cpp  staarch.cpp  starfm.cpp
src/test/: Image_test.cpp  MultiResImages_test.cpp  estarfm_test.cpp  exceptions_test.cpp  fileformat_test.cpp  fitfc_test.cpp  geoinfo_test.cpp  helpers_test.h  image_perf_test.cpp  main_test.cpp  optionparser_test.cpp  parallelizer_test.cpp  spstfm_test.cpp  starfm_test.cpp  type_test.cpp
src/test/images/: LANDSATAQUIRED1.tif  LANDSATAQUIRED2.tif  LANDSATAQUIRED3.tif  MODISAQUIRED1.tif  MODISAQUIRED2.tif  MODISAQUIRED3.tif  Readme.txt  sample_Landsat_t1.tif  sample_Landsat_t2.tif  sample_MODIS_t1.tif  sample_MODIS_t2.tif  test_info_image.tif
src/test/images/artificial-set2/: h1.tif  h2.tif  h3.tif  h4.tif  l1.tif  l2.tif  l3.tif  l4.tif
src/test/images/formats/: float32.tif  float32x2.tif  float32x3.tif  float32x4.tif  float32x5.tif  float64x1.tif  float64x2.tif  float64x3.tif  float64x4.tif  float64x5.tif  int16x1.tif  int16x2.tif  int16x3.tif  int16x4.tif  int16x5.tif  int32.tif  int32x2.tif  int32x3.tif  int32x4.tif  int32x5.tif  uint16.tif  uint16x2.tif  uint16x3.tif  uint16x4.tif  uint16x5.tif  uint8x1.tif  uint8x2.tif  uint8x3.tif  uint8x4.tif  uint8x5.tif
src/test/images/geocrop-border/: modis-ultra-low-res.tif  sentinel-low-res.tif
src/test/images/real-set1/: L_2016_220.tif  L_2016_220.tif.aux.xml  L_2016_236.tif  L_2016_236.tif.aux.xml  L_2016_243.tif  L_2016_243.tif.aux.xml  M_2016_220-bilinear.tif  M_2016_220-bilinear.tif.aux.xml  M_2016_220-nearestneighbor.tif  M_2016_236-bilinear.tif  M_2016_236-bilinear.tif.aux.xml  M_2016_236-nearestneighbor.tif  M_2016_243-bilinear.tif  M_2016_243-bilinear.tif.aux.xml  M_2016_243-nearestneighbor.tif
src/test/images/real-set2/: L_2016158_NIR.tif.aux.xml
src/test/other_resources/: bad_opts  good_opts1  good_opts2  good_opts3
src/utils/: CMakeLists.txt
src/utils/estarfm/: CMakeLists.txt  main.cpp
src/utils/fitfc/: CMakeLists.txt  main.cpp
src/utils/helpers/: bash_completion  utils_common.cpp  utils_common.h  utils_common_test.cpp
src/utils/imgcompare/: CMakeLists.txt  imgcmp.h  imgcmp_test.cpp  main.cpp
src/utils/imggeocrop/: CMakeLists.txt  imggeocrop.h  imggeocrop_test.cpp  main.cpp
src/utils/imginterp/: CMakeLists.txt  customopts.cpp  customopts.h  imginterp_test.cpp  interpolation.h  main.cpp
src/utils/spstfm/: CMakeLists.txt  main.cpp
src/utils/staarch/: CMakeLists.txt  main.cpp
src/utils/starfm/: CMakeLists.txt  main.cpp
tools/: winlibs.R
utils/: CMakeLists.txt
utils/estarfm/: CMakeLists.txt  main.cpp
utils/fitfc/: CMakeLists.txt  main.cpp
utils/helpers/: utils_common.cpp  utils_common.h  utils_common_test.cpp
utils/imgcompare/: CMakeLists.txt  imgcmp.h  imgcmp_test.cpp  main.cpp
utils/imggeocrop/: CMakeLists.txt  imggeocrop.h  imggeocrop_test.cpp  main.cpp
utils/imginterp/: CMakeLists.txt  customopts.cpp  customopts.h  imginterp_test.cpp  interpolation.h  main.cpp
utils/spstfm/: CMakeLists.txt  main.cpp
utils/starfm/: CMakeLists.txt  main.cpp
